kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deliverxy-frontend-admin
  namespace: deliverxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deliverxy-frontend-admin
  template:
    metadata:
      labels:
        app: deliverxy-frontend-admin
    spec:
      containers:
        - name: frontend-admin
          image: redbfs/deliverxy-frontend-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
