kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deliverxy-frontend-admin
  namespace: deliverxy
spec:
  selector:
    app: deliverxy-frontend-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
