kubernetes/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deliverxy-ingress
  namespace: deliverxy
spec:
  rules:
    - host: deliverxy.local # map it to 127.0.0.1 deliverxy.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: deliverxy-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deliverxy-frontend-admin
                port:
                  number: 80
